--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
         <div class="about-text">
             <h2>About <span>Me</span></h2>
             <h4>M-tech Geoinformatic Graduate</h4>
-            <p>A Civil Engineering graduate with a Master's in Geoinformatics. Proficient in tools like ArcGIS and Erdas Imagine, I've developed Virtual Reality tools and conducted analyses on geotechnical phenomena. Through internships at Antrix Corporation Ltd and RDC Concrete Pvt Ltd, I've applied my skills in urban sprawl analysis and quality control. Certified in cloud computing and geodesy, I'm passionate about UAV-based remote sensing, virtual reality, and urban planning, eager to contribute to innovative projects at the intersection of geospatial technologies and civil engineering.</p>
+            <p>I'm a dedicated geospatial enthusiast with expertise in GIS, remote sensing, and coding. My academic background includes an M-Tech in Geoinformatics and a BE in Civil Engineering. I've led projects in virtual reality and urban planning. 
+                <br>I'm known for problem-solving, teamwork, and effective communication. Passionate about advancing geospatial tech, I aim to create impactful solutions for modern challenges.            </p>
             <a href="https://drive.google.com/file/d/1ATBPfijeOA3UO_A5hjE0uSPlGKVasVmz/view?usp=sharing"  target="_blank" class="btn-box"> Download CV</a>
         </div>
     </section>
